--- a/_posts/2018-03-25-我为什么要搭建Github博客.markdown
+++ b/_posts/2018-03-25-我为什么要搭建Github博客.markdown
@@ -1,7 +1,7 @@
-博客---
+--
 layout:     post
 title:      "我为什么要搭建Github博客"
-subtitle:   "我为什么要搭建Github博客
+subtitle:   "\"我为什么要搭建Github博客\""
 date:       2018-03-25 08:39:00
 author:     "stepday"
 header-img: "img/post-bg-2015.jpg"
@@ -16,8 +16,6 @@ tags:
 ## 前言
 2012年自己就搭建过自己的技术分享站点，最近几年很少进行维护了，最近才开始使用github的博客，这个博客更加灵活，自定义模板，非常适合于前端开发人员的开发按流程。在这个模板的问题上我比较懒，直接使用了Hux大神的模板进行了改写。我觉得作为玩github的技术人员还是需要直接的一个博客，书写自己日常的一些想法，我觉得是一个件非常不错的事情，于是我就来了。
 
-
-<p id = "build"></p>
 ---
 
 ## 正文
