--- a/_posts/2018-03-25-这些年我是如何学习前端知识体系的.markdown
+++ b/_posts/2018-03-25-这些年我是如何学习前端知识体系的.markdown
@@ -4,7 +4,7 @@ title:      "这些年我是如何学习前端知识体系的"
 subtitle:   "\"经验值90%来自日常工作\""
 date:       2018-03-25 22:57:00
 author:     "stepday"
-header-img: "img/post-bg-2015.jpg"
+header-img: "img/post-bg-front.jpg"
 catalog: true
 tags:
     - 学习
